crates/xlate/tests/snapshots/golden_matrix__state_replay_reasoning_without_pair__o4-mini__20260910__responses_to_chat__gpt5_chat.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "Weather in Paris? Use the tool."
    },
    {
      "role": "assistant",
      "content": null
    },
    {
      "role": "user",
      "content": "Never mind, just say hi."
    }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "get_weather",
        "description": "Get weather.",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "city": {
              "type": "string"
            }
          },
          "required": [
            "city"
          ],
          "type": "object"
        }
      }
    }
  ],
  "max_completion_tokens": 128,
  "store": false
}
--- headers ---
upstream_streams: false
--- degraded ---
reasoning.opaque=dropped;reasoning_effort=dropped
